# simple_launch

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
example/: composition.py  composition_launch.py  composition_opaque_launch.py  condition_launch.py  event_example_launch.py  event_tutorial_launch.py  example_launch.py  example_opaque_launch.py  included_launch.py  turret.rviz  turret.urdf  turret.xacro
example/gazebo/: demo_world.sdf  gazebo_launch.py  turret_gazebo.rviz
scripts/: call_service  example_waiting.py  service_wrapper  set_parameters
simple_launch/: __init__.py  console.py  events.py  gazebo.py  group.py  simple_substitution.py
src/simple_launch/: __init__.py  frame_prefix_gazebo.py
tests/: composition_launch.py
